# vult-server

./: .gitignore  Cargo.toml  Dockerfile  readme.md
example/: config.toml
sandbox/: config.toml
src/: main.rs
src/api/: db_types.rs  mod.rs  server.rs
src/api/endpoints/: init.rs  init_import.rs  init_upload.rs  init_user.rs  mod.rs  sync.rs  test_reset.rs
src/api/guards/: user.rs
src/config/: cli.rs  mod.rs  parse_config.rs  test_config.rs
src/database/: error.rs  mod.rs  sqlite.rs  traits.rs
src/util/: error.rs  id.rs  types.rs
