[package]
name = "vult-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
toml = "0.5.9"
serde_json = "1.0"
serde = "1.0.137"
rocket = "0.5.0-rc.2"
clap = {version="3.1.18", features=["derive"]}