[package]
name = "vult-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
toml = "0.5.9"
serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0"
bincode = "1.3.3"
rocket = "0.5.0-rc.2"
clap = {version="3.1.18", features=["derive"]}