[package]
name = "vult-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vult-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
clap = { version = "3.1.18", features = ["derive"] }
base64 = "0.13.0"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
log = "0.4.17"
anyhow = "1.0.58"
thiserror = "1.0.24"